# Changelog

MäCAN-Sever by Maximilian Goldschmidt

## [2018-08-11.1]
### Geändert
- Die interne Verwaltung der Geräteliste wurde Geändert
- Die Versionsnummer wird nun in einer eigenen Datei gespeichert
- Changelog vereinheitlicht

### Hinzugefügt
- Es wird erkannt, ob CAN-Geräte, die in der Geräteliste vorhanden sind, tatsächlich vorhanden sind
- CAN-Geräte können aus der Geräteliste gelöscht werden
- Der Changelog ist nun auch über die Interne Hilfe einsehbar


## [2018-08-10.1]
### Behoben
- Ein Fehler bei der Darstellung von Messwerten wurde behoben

### Hinzugefügt
- Platzhalter für das Keyboard (noch funktionslos)


## [2018-07-10.1]
### Behoben
- Werden mehrere Bilder gleichzeitig herunter geladen werden auch alle korrekt angezeigt.
- Auch beim Hochladen werden die Lokbilder nun ohne Neuladen angezeigt.


## [2018-07-09.1]
### Hinzugefügt
- Loks können nun Lokbilder zugewiesen werden.
- Unter "Einstellungen > Lokbilder" können nun Lokbilder hoch/heruntergeladen sowie gelöscht werden.
- Einige Standardwerte (Adresse, Av, Bv, Vmax, Vmin) können nun programmiert werden, sofern der Decoder es unterstützt (bisher nur mfx/M4).

### Behoben
- Anzeigefehler bei der Anmeldung von mfx/M4-Loks.


## [2018-06-30.1]
### Behoben
- mfx/M4-Anmeldung erneut überarbeitet.
- Rechtschreibfehler behoben / Texte angepasst

### Geändert
- lokomotive.cs2 wird nun in /www/config/ gespeichert


## [2018-06-28.3]
### Behoben
- mfx/M4-Anmeldung überarbeitet.


## [2018-06-28.2]
### Hinzugefügt
- Die Lokliste wird nun zusätzlich als "lokomotive.cs2" gespeichert, um sie Anwendungen, die diese benötigen, zur verfügung zu stellen
- Einträge in der Hilfe


## [2018-06-28.1]
### Hinzugefügt
- Grunlagen für eine integrierte Hilfe
- Einstellungen für CAN-Geräte werden für die Dauer einer Sitzung in der Geräteliste gespeichert
- Möglichkeit, den MFX-Neuanmeldezähler zu erhöhen, um verlorene Loks wieder zu finden

### Behoben